# postgresql-test-app

./: CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  concierge.yaml  config.yaml  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  spread.yaml  tox.ini
.github/: renovate.json5
.github/workflows/: approve_renovate_pr.yaml  ci.yaml  integration_test.yaml  lib-check.yaml  release.yaml  tiobe_scan.yaml
src/: charm.py  continuous_reads.py  continuous_writes.py
tests/integration/: conftest.py  helpers.py  test_smoke.py  test_smoke_jammy.py  test_smoke_noble.py
tests/spread/test_smoke.py/: task.yaml
tests/spread/test_smoke_jammy.py/: task.yaml
tests/spread/test_smoke_noble.py/: task.yaml
tests/unit/: conftest.py  test_charm.py  test_continuous_reads.py
